Fix z-index scrollbar issue

--- a/polaris-react/src/components/DataTable/DataTable.scss
+++ b/polaris-react/src/components/DataTable/DataTable.scss
@@ -350,7 +350,7 @@
 
   background: white;
 
-  z-index: var(--p-z-3);
+  z-index: 1;
   border-collapse: collapse;
   &.Visible {
     border-right: var(--p-border-divider);
